<resources>
    <string name="app_name">FoodYum Merchant</string>
    <string name="mail_box">Hộp thư</string>
    <string name="order_history">Lịch sử đặt hàng</string>
    <string name="order_complaint">Đơn hàng khiếu nại</string>
    <string name="order">Đơn hàng</string>
    <string name="restaurant_manager">Quản lý nhà hàng</string>
    <string name="menu_manager">Quản lý menu</string>
    <string name="statistical">Thống kê</string>
    <string name="app_information">Thông tin ứng dụng</string>
    <string name="default_version">v1.0.0.0</string>
    <string name="food_yum_kitchen">FoodYum Kitchen</string>
    <string name="manager_information">Thông tin người quản lý</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remember_me">Remember me</string>
    <string name="register">Đăng ký</string>
    <string name="do_not_have_acc">Chưa có tài khoản?</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="pass">Mật khẩu</string>
    <string name="email">Email</string>
    <string name="vi">VI</string>
    <string name="oops">OOPS!</string>
    <string name="no_internet_connection">Không có kết nối internet !</string>
    <string name="please_check_your_connection">Vui lòng kiểm tra kết nối của bạn !!</string>
    <string name="retry">Thử lại</string>
    <string name="confirm_pass">Xác nhận mật khẩu</string>
    <string name="already_have_an_account">Đã có tài khoản.</string>
    <string name="add">Tạo</string>
    <string name="find_in_the_menu">Tìm trong thực đơn</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="list_of_dishes">Danh sách món</string>
    <string name="appetizer">Món khai vị</string>
    <string name="account_management">Quản lý tài khoản</string>
    <string name="change_password">Thay đổi mật khẩu</string>
    <string name="information_account">Thông tin tài khoản</string>
    <string name="name">Tên</string>
    <string name="default_name">Full Name User</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="email_address">Địa chỉ email</string>
    <string name="default_phone_number">0987654123</string>
    <string name="default_email">foodapp@gmail.com</string>
    <string name="logout">Đăng xuất</string>
    <string name="save">Lưu</string>
    <string name="cancel">Huỷ</string>
    <string name="pass_old">Mật khẩu cũ</string>
    <string name="pass_new">Mật khẩu mới</string>
    <string name="pass_confirm">Xác nhận mật khẩu</string>
    <string name="full_name">Họ và tên</string>
    <string name="change_information">Thay đổi thông tin cá nhân</string>
    <string name="category">Thể loại</string>
    <string name="default_desc">Mô tả</string>
    <string name="price">Giá</string>
    <string name="product_name">Tên sản phẩm</string>
    <string name="add_product">Thêm sản phẩm mới</string>
    <string name="waiting_time">Thời gian chờ</string>
    <string name="choose_a_photo">Chọn ảnh</string>
    <string name="open_camera">Mở camera</string>
    <string name="restaurant_name">Tên nhà hàng/cửa hàng</string>
    <string name="address">Địa chỉ</string>
    <string name="food_management">Quản lý món ăn</string>
    <string name="default_name_restaurant">Cơm Việt - Cổ Nhuế 2</string>
    <string name="default_rate">4.8</string>
    <string name="default_quantity_sold">(100+)</string>
    <string name="default_distance">0.5km</string>
    <string name="name_product">Tên món</string>
    <string name="vnd">VNĐ</string>
    <string name="available">Có sẵn</string>
    <string name="temp_out_stock">Tạm hết hàng</string>
    <string name="not_available">Không có sẵn (ẩn trên app)</string>
    <string name="please_wait">Xin chờ</string>
    <string name="deleted">Xoá</string>
    <string name="confirm">Xác nhận</string>
    <string name="confirm_delete">Bạn có chắc chắn muốn xoá?</string>
    <string name="discount">Giảm giá</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="key_map">AIzaSyDOqvpzZHLSZxeeN0EEED41G-1nk5xNKEU</string>
    <string name="price_product_demo">99.999đ</string>
    <string name="out_of_stock">Tạm hết hàng</string>
    <string name="quantity">nx</string>
    <string name="confirm_order">Xác nhận đơn hàng</string>
    <string name="total">Tổng cộng</string>
    <string name="updating">updating</string>
    <string name="coupon">Mã khuyễn mãi</string>
    <string name="total_order">45.000đ (1)</string>
    <string name="menu">Menu</string>
    <string name="order_er">Khách hàng:</string>
    <string name="receive_order">Nhận đơn lúc: dd/MM/yyyy HH:mm</string>
    <string name="id_order"># ID 0981</string>
    <string name="waiting_time_value">10:00</string>
    <string name="quantity_value">3 món</string>
    <string name="space"> | </string>
    <string name="order_id">ID 0981</string>
    <string name="char1">#</string>
    <string name="selectDate">Chọn - ngày</string>
    <string name="order_details">Chi tiết đơn hàng</string>
    <string name="stop_orders">Ngừng nhận đơn hàng</string>
    <string name="operating_time">Thời gian hoạt động</string>
    <string name="day_closed">Ngày đóng cửa</string>
</resources>