<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f5f7fb"
        android:orientation="vertical"
        tools:context=".ui.manager_menu.ManageMenuActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/account_management"
            android:textSize="16sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/changePassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:text="@string/change_password"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:text="@string/information_account"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/changeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="10dp"
                android:paddingStart="25dp"
                android:paddingEnd="15dp"
                android:weightSum="6">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="end"
                    android:text="@string/default_name"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:background="@color/gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/changePhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="10dp"
                android:paddingStart="25dp"
                android:paddingEnd="15dp"
                android:weightSum="6">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/phone_number"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:text="@string/default_phone_number"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:background="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/changeEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="10dp"
                android:paddingStart="25dp"
                android:paddingEnd="15dp"
                android:weightSum="6">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/email_address"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:text="@string/default_email"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:background="@color/gray" />
        </LinearLayout>

        <TextView
            android:id="@+id/logOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:textStyle="bold"
            android:background="#f5f7fb"
            android:textSize="20sp"
            android:text="@string/logout"
            android:textColor="@color/teal_200" />


    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>