<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="#21272f"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:padding="10dp"
        android:src="@drawable/ic_arrow_back_white" />

    <TextView
        android:id="@+id/tvHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:text="@string/food_yum_kitchen"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvManagerAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/manager_information"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
    <View
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"/>

</LinearLayout>