<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg_corner"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="26sp"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/change_password"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/pass_old"
        android:textColorHint="#9C9898"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passOld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_vpn_key_black_24"
            android:drawablePadding="12dp"
            android:inputType="textPassword"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/pass_new"
        android:textColorHint="#9C9898"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_vpn_key_black_24"
            android:drawablePadding="12dp"
            android:inputType="textPassword"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/pass_confirm"
        android:textColorHint="#9C9898"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_vpn_key_black_24"
            android:drawablePadding="12dp"
            android:inputType="textPassword"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnSave"
            android:layout_marginHorizontal="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
        <Button
            android:id="@+id/btnCancel"
            android:layout_marginHorizontal="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>