<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_bg"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imgClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imgSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_baseline_done_black_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <RadioButton
            android:id="@+id/rbAvailable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/available"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbTempOutStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temp_out_stock"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbNotAvailable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RadioGroup>


</LinearLayout>