<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddCategoryActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgCate"
        android:layout_width="110dp"
        android:layout_height="120dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/default_thumbnail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnOpenGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/choose_a_photo"
        app:layout_constraintBottom_toBottomOf="@+id/imgCate"
        app:layout_constraintStart_toEndOf="@+id/imgCate"
        app:layout_constraintTop_toTopOf="@+id/imgCate"
        app:layout_constraintVertical_bias="0.333" />

    <EditText
        android:id="@+id/edNameCate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="32dp"
        android:hint="Tên loại"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCate" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edNameCate" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toEndOf="@+id/btnSave"
        app:layout_constraintTop_toBottomOf="@+id/edNameCate" />

</androidx.constraintlayout.widget.ConstraintLayout>