<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    android:background="@color/ice_blue"
    tools:context=".ui.restaurant_manager.RestaurantManagerFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_layout"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/switchStopOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/stop_orders"
            android:textSize="16sp"
            android:textColor="@color/black"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="7dp"
            android:background="#F0F6F6" />

        <TextView
            android:id="@+id/tvOperatingTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="10dp"
            android:text="@string/operating_time"
            app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="7dp"
            android:background="#F0F6F6" />
        <TextView
            android:id="@+id/tvDayClosed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="10dp"
            android:text="@string/day_closed"
            app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="7dp"
            android:background="#F0F6F6" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>